<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab Rat</string>

    <string name="button_new_game">New Game</string>
    <string name="button_continue">Continue</string>
    <string name="button_highscore">Highscore</string>
    <string name="button_settings">Settings</string>
    <string name="button_return">Return</string>
    <string name="text_time">Time:</string>
    <string name="text_level">Level:</string>
    <string name="menu_button">Menu</string>
    <string name="win_text">You won!</string>
    <string name="name_rank_above">You made it to the top 10! </string>
    <string name="name_rank_highest">You made it to first place!</string>
    <string name="name_rank_below">You did not set a new highscore .. :(</string>
    <string name="insert_name">Write your name here</string>
    <string name="hor_calibration">Horizontal calibration</string>
    <string name="ver_calibration">Vertical calibration</string>
    <string name="hor_axis_reverse">Inverse horizontal axis</string>
    <string name="ver_axis_reverse">Inverse vertical axis</string>

</resources>