<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WinPopupFragment">

   <TextView
       android:id="@+id/popup_title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginVertical="4dp"
       android:text="@string/win_text"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textAlignment="center"/>

    <TextView
        android:id="@+id/popup_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/name_rank_above"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="12dp"
        android:layout_gravity="center"
        android:hint="@string/insert_name"/>

</LinearLayout>