<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00aacc">

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00EE00"
        android:paddingHorizontal="32dp"
        android:text="@string/button_return"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/meter_square"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:background="#99EEFF"
        app:layout_constraintBottom_toTopOf="@+id/return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/meter_point"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:background="#000000"
            android:gravity="center"
            android:text="" />

    </RelativeLayout>

    <TextView
        android:id="@+id/width_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hor_calibration"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/width_slider"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/width_slider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:padding="6dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/height_text"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_calibration"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/height_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/height_slider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:padding="6dp"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hor_axis_reverse"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_slider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_axis_reverse"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/meter_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

</androidx.constraintlayout.widget.ConstraintLayout>